--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -19,7 +19,8 @@ overrides:
     },
     {
       env: { node: true },
-      files: ['__tests__/**/*.js'],
+      files:
+        ['__tests__/**/*.js', 'generators/jest/templates/__tests__/**/*.js'],
       extends: ['plugin:jest/recommended'],
       plugins: ['jest'],
       rules: { jest/expect-expect: 0, no-template-curly-in-string: 0 },
