--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -66,6 +66,7 @@
       "@commitlint/config-conventional": "^17.8.0",
       "@faker-js/faker": "^8.0.2",
       "@jest/globals": "^29.7.0",
+      "jest-environment-jsdom": "^29.6.4",
       "@rollup/plugin-babel": "^6.0.3",
       "@rollup/plugin-node-resolve": "^15.2.0",
       "eslint": "^8.47.0",
