--- a/package.json
+++ b/package.json
@@ -16,7 +16,36 @@
       "import": "./dist/generators/app/index.js"
     }
   },
-  "keywords": [],
+  "keywords": [
+    "yeoman-generator",
+    "generator",
+    "yeoman",
+    "npm",
+    "package",
+    "quality",
+    "eslint",
+    "prettier",
+    "babel",
+    "commitlint",
+    "husky",
+    "jsdoc",
+    "readme-md-generator",
+    "rollup",
+    "lint-staged",
+    "jest",
+    "jsdoc",
+    "quality vue3 plugin",
+    "git hooks",
+    "es6",
+    "declaration files",
+    "tsc",
+    "git",
+    "pre-commit",
+    "pre-push",
+    "Vue",
+    "Vue3",
+    "JavaScript"
+  ],
   "files": [
     "dist"
   ],
